@@ -1,0 +1,8 @@
+; Podcast Manager for Joomla!
+; Copyright (C) 2011 Michael Babker. All rights reserved.
+; Note : All ini files need to be saved as UTF-8 - No BOM
+; Double quotes in the values have to be formatted as "_QQ_"
+
+PLG_FINDER_PODCASTMANAGER_PODCASTS="Smart Search - Podcast Manager Podcasts"
+PLG_FINDER_PODCASTMANAGER_PODCASTS_ERROR_INSTALL_JVERSION="This release of Podcast Manager requires Joomla! 2.5 or newer"
+PLG_FINDER_PODCASTMANAGER_PODCASTS_XML_DESCRIPTION="This plugin indexes Podcast Manager Podcasts."
