@@ -1,0 +1,18 @@
+<?xml version="1.0" encoding="utf-8"?>
+<extension version="2.5" type="plugin" group="finder">
+	<name>plg_finder_podcastmanager_podcasts</name>
+	<creationDate>##DATE##</creationDate>
+	<author>Michael Babker</author>
+	<copyright>(C) 2011 Michael Babker</copyright>
+	<authorEmail>mbabker@flbab.com</authorEmail>
+	<authorUrl>http://www.babdev.com</authorUrl>
+	<version>##VERSION##</version>
+	<license>GNU/GPL Version 2 or later</license>
+	<description>PLG_FINDER_PODCASTMANAGER_PODCASTS_XML_DESCRIPTION</description>
+	<scriptfile>script.php</scriptfile>
+	<files>
+		<filename plugin="podcastmanager_podcasts">podcastmanager_podcasts.php</filename>
+		<filename>index.html</filename>
+		<folder>language</folder>
+	</files>
+</extension>
